# kp_crawler

hw3/: pyproject.toml
hw3/kp_crawler/: fastapi_service_news.py  scrapy.cfg
hw3/kp_crawler/kp_crawler/: items.py  middlewares.py  pipelines.py  settings.py
hw3/kp_crawler/kp_crawler/spiders/: kp_spider.py
