[project]
name = "kp-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Pyatkin",email = "pyatkin.nikitka@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
